force-app/main/default/objects/GeoConcept_Map_Setup_list__c/GeoConcept_Map_Setup_list__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>GeoConcept Map Settings, like name, server, precision etc.</description>
    <label>GeoConcept Map Setup - list</label>
</CustomObject>