force-app/main/default/objects/GeoConcept_Map_Setup_list__c/fields/initial_map_location__c.field-meta.xml
<CustomField>
    <fullName>initial_map_location__c</fullName>
    <label>initial map location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>