force-app/main/default/objects/GeoConcept_Map_Setup_list__c/fields/limits__c.field-meta.xml
<CustomField>
    <fullName>limits__c</fullName>
    <label>limits</label>
    <length>100</length>
    <type>Text</type>
</CustomField>