force-app/main/default/objects/GeoConcept_Map_Setup_list__c/fields/MapName__c.field-meta.xml
<CustomField>
    <fullName>MapName__c</fullName>
    <label>MapName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>