force-app/main/default/objects/GeoConcept_Map_Setup_list__c/fields/precision__c.field-meta.xml
<CustomField>
    <fullName>precision__c</fullName>
    <label>precision</label>
    <length>10</length>
    <type>Text</type>
</CustomField>