force-app/main/default/objects/GeoConcept_Map_Setup_list__c/fields/ratios_1__c.field-meta.xml
<CustomField>
    <fullName>ratios_1__c</fullName>
    <label>ratios 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>