force-app/main/default/objects/GeoConcept_Map_Setup_list__c/fields/ratios_2__c.field-meta.xml
<CustomField>
    <fullName>ratios_2__c</fullName>
    <label>ratios 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>