force-app/main/default/objects/GeoConcept_Map_Setup_list__c/fields/ratios_3__c.field-meta.xml
<CustomField>
    <fullName>ratios_3__c</fullName>
    <label>ratios 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>