force-app/main/default/objects/GeoConcept_Map_Setup_list__c/fields/server__c.field-meta.xml
<CustomField>
    <fullName>server__c</fullName>
    <label>server</label>
    <length>100</length>
    <type>Text</type>
</CustomField>