force-app/main/default/objects/GeoConcept_Map_Setup_list__c/fields/tab_pose__c.field-meta.xml
<CustomField>
    <fullName>tab_pose__c</fullName>
    <label>tab Pose</label>
    <length>50</length>
    <type>Text</type>
</CustomField>