force-app/main/default/objects/GeoConcept_Map_Setup_list__c/fields/tab_Prospection__c.field-meta.xml
<CustomField>
    <fullName>tab_Prospection__c</fullName>
    <label>tab Prospection</label>
    <length>50</length>
    <type>Text</type>
</CustomField>