force-app/main/default/objects/GeoConcept_Map_Setup_list__c/fields/WS_server_endpoint__c.field-meta.xml
<CustomField>
    <fullName>WS_server_endpoint__c</fullName>
    <label>WS server endpoint</label>
    <type>Url</type>
</CustomField>